# MusicAndCode

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
Encryption/: Encryption.cpp  Encryption.h
NoteFrequencyTable/: FrequencyTable.cpp  FrequencyTable.h
